---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Try to see of swapping can cancel deletion
    - See if on_entity_damaged can intercept the last hp
    - Keep the platform on life support when it dies
    - Create a platform in graveyard orbit
    - Cleanup 〃
    - Clone the old platform onto the new platform
    - Cloning deleted the hub, surface still exists so we give it a platform ghost
    - Remove the graveyard platform when deleting the ghost hub
    - Preserve the schedule
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 06
  Info:
    - Proof of concept